--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,9 +7,13 @@ import HeaderLink from './HeaderLink.astro';
 	<nav>
 		<h2><a href="/">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
-			<HeaderLink href="/">Home</HeaderLink>
-			<HeaderLink href="/blog">Blog</HeaderLink>
-			<HeaderLink href="/about">About</HeaderLink>
+			<HeaderLink href="/">Accueil</HeaderLink>
+			<HeaderLink href="/blog">A propos</HeaderLink>
+			<HeaderLink href="/about">Compétences</HeaderLink>
+			<HeaderLink href="/about">Portfolio</HeaderLink>
+			<HeaderLink href="/about">Contact</HeaderLink>
+
+
 		</div>
 		<div class="social-links">
 			<a href="https://m.webtoo.ls/@astro" target="_blank">
