--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,9 +9,9 @@ import HeaderLink from './HeaderLink.astro';
 		<div class="internal-links">
 			<HeaderLink href="/">Accueil</HeaderLink>
 			<HeaderLink href="/blog">A propos</HeaderLink>
-			<HeaderLink href="/about">Compétences</HeaderLink>
-			<HeaderLink href="/about">Portfolio</HeaderLink>
-			<HeaderLink href="/about">Contact</HeaderLink>
+			<HeaderLink href="/competences">Compétences</HeaderLink>
+			<HeaderLink href="/portfolio">Portfolio</HeaderLink>
+			<HeaderLink href="/contact">Contact</HeaderLink>
 
 
 		</div>
