Modification de la page présentation et ajout de la page CV

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ const today = new Date();
 ---
 
 <footer>
-	&copy; {today.getFullYear()} Tom Marcheron. All rights reserved.
+	&copy; {today.getFullYear()}, Tom Marcheron. Tous droits réservés.
 	<div class="social-links">
 			<a href="https://linkedin.com/in/tom-marcheron-35b087357" target="_blank" aria-label="LinkedIn">
 				<svg viewBox="0 0 24 24" aria-hidden="true" width="32" height="32" fill="currentColor">
