--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,7 @@ import { SITE_TITLE } from '../consts';
 				</button>
 				<div class="dropdown-content">
 					<a href="/presentation">Présentation</a>
-					<a href="/cv.pdf" target="_blank">Mon CV</a>
+					<a href="/cv">Mon CV</a>
 				</div>
 			</div>
 
@@ -29,8 +29,8 @@ import { SITE_TITLE } from '../consts';
 					<svg class="chevron" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" /></svg>
 				</button>
 				<div class="dropdown-content">
-					<a href="/developpement">Dev WEB</a>
-					<a href="/communication">Communication WEB</a>
+					<a href="/developpement">Développement Web</a>
+					<a href="/communication">Communication Web</a>
 					<a href="/design">Design Multimédia</a>
 					<a href="/light">Éclairage scénique</a>
 				</div>
