--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -169,7 +169,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	.content-box h2 {
 		font-size: 2rem;
 		margin-top: 0;
-		color: #0E0078;
+		color: #22D3EE;
 		margin-bottom: 1.5rem;
 	}
 
